# platzi-mcp

./: .gitignore  README.md  pyproject.toml
clase16/: server.py
clase17/: server.py  server2.py
